[package]
name = "dnd_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
unicode-width = "0.1.5"

[target.'cfg(target_arch = "arm")']
rustflags = [
  "-C", "link-arg=-arch",
  "-C", "link-arg=arm64",
]

[target.'cfg(target_arch = "aarch64")']
rustflags = [
  "-C", "target-feature=+crt-static",
]